Some of the posts

--- a/content/posts/my-favorite-ted-talk/index.mdx
+++ b/content/posts/my-favorite-ted-talk/index.mdx
@@ -17,7 +17,7 @@ Even today, after many TEDs listened and watched, my favorite is still one from 
 
 Watch it first, then we'll talk:
 
-<div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/ben_dunlap_talks_about_a_passionate_life" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
+<div style={{maxWidth: 854}}><div style={{position:'relative',height:0,paddingBottom: '56.25%'}}><iframe src="https://embed.ted.com/talks/ben_dunlap_talks_about_a_passionate_life" width="854" height="480" style={{position:'absolute',left:0,top:0,width:'100%', height: '100%'}} frameBorder="0" scrolling="no" allowfullscreen></iframe></div></div>
 
 Several lessons can be drawn from this video. I could focus on how one became a Holocaust survivor, or on the way a person decided to deal with someone who was stealing your stuff and decided to see the best in people, or even how to deal with cultural differences in the corporate world.
 
