--- a/content/posts/four-good-books-to-change-the-way-you-see-write-javascript/index.mdx
+++ b/content/posts/four-good-books-to-change-the-way-you-see-write-javascript/index.mdx
@@ -24,14 +24,15 @@ The books listed here may have overlapped subjects. But in general, these are bo
 
 <div class="row-fluid">
 <figure>
-<a href="https://www.amazon.com/gp/product/0596806752/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0596806752&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style="border: 0px;" src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=0596806752&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="122" height="160" border="0"></a>
+<a href="https://www.amazon.com/gp/product/0596806752/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0596806752&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style={{border: 0}} src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=0596806752&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="122" height="160" border="0" /></a>
 </figure>
-In my opinion this book is a good introduction for anyone who wants to begin to understand a bit beyond the basic syntax of the language. No, it is not a book that will delve much into the language, will only begin to cover some topics in a more advanced way. But mostly, will help you understand a little better what's good about JavaScript. If you already understand well the syntax of JavaScript, you already know how to work with objects and functions you probably can skip this book.</div>
+In my opinion this book is a good introduction for anyone who wants to begin to understand a bit beyond the basic syntax of the language. No, it is not a book that will delve much into the language, will only begin to cover some topics in a more advanced way. But mostly, will help you understand a little better what's good about JavaScript. If you already understand well the syntax of JavaScript, you already know how to work with objects and functions you probably can skip this book.
+</div>
 
 ## <a href="https://www.amazon.com/gp/product/0596806752/ref=as_li_ss_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0596806752&amp;linkCode=as2&amp;tag=tempcodi0f-20" target="_blank">JavaScript Patterns</a> by <a href="https://www.phpied.com/" target="_blank">Stoyan Stefanov</a>
 
 <figure>
-<a href="https://www.amazon.com/gp/product/0596806752/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0596806752&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style="border: 0px;" src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=0596806752&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="122" height="160" border="0"></a>
+<a href="https://www.amazon.com/gp/product/0596806752/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0596806752&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style={{border: 0}} src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=0596806752&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="122" height="160" border="0" /></a>
 </figure>
 As the name says, will discuss patterns. The patterns here are related to specific features of JavaScript, for example, how to reuse code using Prototype. It is also about conventions adopted in the language, how to solve the problem of global scope, how to use constructors, among others. The book also addresses some of the <a href="https://en.wikipedia.org/wiki/Design_Patterns">GoF patterns</a>, but with a vision focused on the characteristics of JavaScript. This is certainly a book that should be read by any developer who wants to take JavaScript more seriously.
 
@@ -39,17 +40,19 @@ As the name says, will discuss patterns. The patterns here are related to specif
 
 <div class="row-fluid">
 <figure>
-<a href="https://www.amazon.com/gp/product/193398869X/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=193398869X&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style="border: 0px;" src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=193398869X&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="127" height="160" border="0"></a>
+<a href="https://www.amazon.com/gp/product/193398869X/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=193398869X&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style={{border: 0}} src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=193398869X&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="127" height="160" border="0" /></a>
 </figure>
-For me, this is the best book about JavaScript from the didactic point of view. Great examples, and clear explanations and many details about the language. In this book, was the best explanation I've ever read about how closures work in JavaScript. From the books in this list this is the one that deals more with the interactions between JavaScript and the browser, demonstrating strategies for dealing with the differences between the major browser manufacturers.</div>
+For me, this is the best book about JavaScript from the didactic point of view. Great examples, and clear explanations and many details about the language. In this book, was the best explanation I've ever read about how closures work in JavaScript. From the books in this list this is the one that deals more with the interactions between JavaScript and the browser, demonstrating strategies for dealing with the differences between the major browser manufacturers.
+</div>
 
 ## <a href="https://www.amazon.com/gp/product/0321812182/ref=as_li_ss_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0321812182&amp;linkCode=as2&amp;tag=tempcodi0f-20" target="_blank">Effective JavaScript: 68 Specific Ways to Harness the Power of JavaScript</a> por <a href="https://calculist.org/" target="_blank">David Herman</a>
 
 <div class="row-fluid">
 <figure>
-<a href="https://www.amazon.com/gp/product/0321812182/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0321812182&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style="border: 0px;" src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=0321812182&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="122" height="160" border="0"></a>
+<a href="https://www.amazon.com/gp/product/0321812182/ref=as_li_ss_il?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0321812182&amp;linkCode=as2&amp;tag=tempcodi0f-20"><img class="alignleft" style={{border: 0}} src="https://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;ASIN=0321812182&amp;Format=_SL160_&amp;ID=AsinImage&amp;MarketPlace=US&amp;ServiceVersion=20070822&amp;WS=1&amp;tag=tempcodi0f-20" alt="" width="122" height="160" border="0" /></a>
 </figure>
-This is without doubt the book that goes deeper into the language. It's a short book, but with a lot of information. If you decide to read this book after the others (I recommend that), you will see that some of the tips will be already covered by the other books, but most of the **68 specific ways** will bring enough information. Some of the items should be read more than once because they are quite complex (at least to my limited brain), but the book is pure information from beginning to end.</div>
+This is without doubt the book that goes deeper into the language. It's a short book, but with a lot of information. If you decide to read this book after the others (I recommend that), you will see that some of the tips will be already covered by the other books, but most of the **68 specific ways** will bring enough information. Some of the items should be read more than once because they are quite complex (at least to my limited brain), but the book is pure information from beginning to end.
+</div>
 
 ## All of this about JavaScript?
 
