Some more posts migrated

--- a/content/posts/its-just-a-mess-if-you-let-it-single-responsibility-with-javascript/index.mdx
+++ b/content/posts/its-just-a-mess-if-you-let-it-single-responsibility-with-javascript/index.mdx
@@ -144,4 +144,4 @@ The benefits of a code like this (compared to the previous) are many, and very s
 
 To conclude, we have a lot more organized code, easy to maintain and with clearer responsibilities. To get to this, I only used techniques known from other languages (or even, independent of languages) and without inventing much. So next time you say that it's very difficult to maintain JavaScript code, think about whether you are contributing to a sustainable code or just preparing the lunch for next Sunday.
 
-<img alt="Spaghetti" src="Spaghetti.gif" class="center-me">
+<img alt="Spaghetti" src="Spaghetti.gif" />
