Start to implement

--- a/content/posts/communicating-intention-with-functional-typescript/index.mdx
+++ b/content/posts/communicating-intention-with-functional-typescript/index.mdx
@@ -1,12 +1,20 @@
 ---
 title: Communicating Intention with Functional TypeScript
 category: presentations
-date: "2020-05-04"
+date: 2020-05-04
 tags:
   - presentation
   - typescript
 comments: true
 path: "/blog/communicating-intention-with-functional-typescript/"
+slug: communicating-intention-with-functional-typescript
+summary:
+  So, I gave this talk at React Ottawa, and it was all about using TypeScript
+  and functional programming to make our code intentions crystal clear. The goal
+  was to make our lives and our buddies' lives easier when we revisit that code
+  later on.
+banner: https://res.cloudinary.com/duacbnsfa/image/upload/f_auto,q_auto/v1/blog/w2ztcxylo9fc3kj3cvdr
+readTime: 1
 ---
 
 I will be giving (gave) a talk at
