--- a/content/posts/fs-pragmatic-presentation/index.mdx
+++ b/content/posts/fs-pragmatic-presentation/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: F# - Where Functional Programming Meets Pragmatic
 category: presentations
-date: "2019-10-05"
+date: 2019-10-05
 tags:
   - presentation
   - fsharp
