--- a/content/posts/i-was-listening-to-a-podcast-2018-edition/index.mdx
+++ b/content/posts/i-was-listening-to-a-podcast-2018-edition/index.mdx
@@ -2,7 +2,7 @@
 title: I was listening to a podcast... (the 2018 edition)
 description: A list of podcasts that I am subscribed to
 category: podcasts
-date: "2018-07-26"
+date: 2018-07-26
 tags:
   - podcasts
 comments: true
