--- a/content/posts/real-immutable-types-with-typescript/index.mdx
+++ b/content/posts/real-immutable-types-with-typescript/index.mdx
@@ -3,7 +3,7 @@ title: Real Immutable Types With TypeScript
 description:
   How to define a simple TypeScript type that will make your objects immutable
 category: code
-date: "2020-03-07"
+date: 2020-03-07
 tags:
   - code
   - typescript
