--- a/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
+++ b/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
@@ -2,7 +2,7 @@
 title: TypeScript and the Power of the Unknown
 description: What is TypeScript's unknown type and how it can be used
 category: code
-date: "2019-07-15"
+date: 2019-07-15
 tags:
   - code
   - typescript
