--- a/content/posts/what-makes-a-good-team/index.mdx
+++ b/content/posts/what-makes-a-good-team/index.mdx
@@ -2,7 +2,7 @@
 title: What makes a good team
 description: My take on what a team needs to be good
 category: career
-date: "2017-01-07"
+date: 2017-01-07
 tags:
   - career
 comments: true
