--- a/content/posts/handling-nulls-in-csharp-the-right-way/index.mdx
+++ b/content/posts/handling-nulls-in-csharp-the-right-way/index.mdx
@@ -4,7 +4,7 @@ description:
   How to use the language-ext library to handle nulls in C# in an effective and
   safe manner
 category: code
-date: "2017-01-31"
+date: 2017-01-31
 tags:
   - csharp
   - functional programming
