--- a/content/posts/reliable-react-with-fsharp/index.mdx
+++ b/content/posts/reliable-react-with-fsharp/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Reliable React With F#
 category: presentations
-date: "2019-10-25"
+date: 2019-10-25
 tags:
   - presentation
   - fsharp
