Home mobile version light

--- a/content/posts/communicating-intention-with-functional-typescript/index.mdx
+++ b/content/posts/communicating-intention-with-functional-typescript/index.mdx
@@ -13,7 +13,8 @@ summary:
   and functional programming to make our code intentions crystal clear. The goal
   was to make our lives and our buddies' lives easier when we revisit that code
   later on.
-banner: https://res.cloudinary.com/duacbnsfa/image/upload/f_auto,q_auto/v1/blog/w2ztcxylo9fc3kj3cvdr
+thumbnail: https://res.cloudinary.com/duacbnsfa/image/upload/f_auto,q_auto/v1/blog/articles/rhmcqhbvgylio5vc4vci
+banner: https://res.cloudinary.com/duacbnsfa/image/upload/f_auto,q_auto/v1/blog/articles/fl3lfv2v7sot264pqfos
 readTime: 1
 ---
 
