Articles first pass

--- a/content/posts/handling-nulls-in-csharp-the-right-way/index.mdx
+++ b/content/posts/handling-nulls-in-csharp-the-right-way/index.mdx
@@ -10,7 +10,13 @@ tags:
   - functional programming
   - language extensions
 comments: true
-path: "/blog/2017/01/31/handling-nulls-in-csharp-the-right-way"
+slug: handling-nulls-in-csharp-the-right-way
+summary:
+  Learn how to handle null values in C# effectively using the language-ext
+  library. Discover the problems associated with nulls, the importance of
+  avoiding their use, and how language-ext's Option<T> type provides a better
+  alternative. Explore real-life scenarios and code examples to understand the
+  benefits of using Option<T> for null handling in C#.
 ---
 
 Working with the possibility of null in any language that allows it, sucks. It's
