--- a/content/posts/i-was-listening-to-a-podcast-2018-edition/index.mdx
+++ b/content/posts/i-was-listening-to-a-podcast-2018-edition/index.mdx
@@ -5,8 +5,12 @@ category: podcasts
 date: 2018-07-26
 tags:
   - podcasts
-comments: true
-path: "/blog/i-was-listening-to-a-podcast-2018-edition"
+slug: i-was-listening-to-a-podcast-2018-edition
+summary:
+  Explore a curated list of podcasts from various domains including tech, news,
+  entertainment, and sports. This 2018 edition provides an updated selection of
+  podcasts that the author frequently listens to, offering insights and
+  recommendations for each.
 ---
 
 Lately I was made aware by my colleagues that I begin a lot of sentences with
