--- a/content/posts/real-immutable-types-with-typescript/index.mdx
+++ b/content/posts/real-immutable-types-with-typescript/index.mdx
@@ -7,8 +7,11 @@ date: 2020-03-07
 tags:
   - code
   - typescript
-comments: true
-path: "/blog/real-immutable-types-with-typescript"
+slug: real-immutable-types-with-typescript
+summary:
+  Discover a simple, library-free method to create immutable objects in
+  TypeScript. Learn about the Immutable<T> type, its advantages over the
+  built-in Readonly type, and its limitations at runtime.
 ---
 
 When writing TypeScript there's a pretty easy, simple solution to create
