--- a/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
+++ b/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
@@ -6,8 +6,12 @@ date: 2019-07-15
 tags:
   - code
   - typescript
-comments: true
-path: "/blog/typescript-and-the-power-of-the-unknown"
+slug: typescript-and-the-power-of-the-unknown
+summary:
+  Uncover the power of TypeScript's 'unknown' type, a safer alternative to
+  'any'. Learn about its use cases, including migrating from JavaScript, working
+  with third-party libraries without type definitions, and consuming APIs that
+  aren't yet implemented.
 ---
 
 TypeScript is a language that is moving forward really fast and sometimes is
