--- a/content/posts/what-makes-a-good-team/index.mdx
+++ b/content/posts/what-makes-a-good-team/index.mdx
@@ -6,7 +6,12 @@ date: 2017-01-07
 tags:
   - career
 comments: true
-path: "/blog/2017/01/07/what-makes-a-good-team"
+slug: what-makes-a-good-team
+summary:
+  Discover the key characteristics that make a team truly exceptional. Learn
+  about constant challenges, the importance of the human perspective, attention
+  to details, eagerness to learn, and being open-minded. Find out what makes a
+  team great.
 ---
 
 In the first week of 2017 I changed jobs, I started in a new company after a
