Dracula code theme

--- a/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
+++ b/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
@@ -19,7 +19,7 @@ hard to keep up with it, there are so many features being released constantly,
 that we may be missing some really important gems. I think that the `unknown`
 type is one of those.
 
-## What is it?
+## What is the `unknown` type?
 
 The `unknown` type is a basic TypeScript type that was
 [introduced in version 3.0 of the language](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-3-0.html#new-unknown-top-type).
