--- a/content/posts/creating-typescript-typings-for-existing-react-components/index.mdx
+++ b/content/posts/creating-typescript-typings-for-existing-react-components/index.mdx
@@ -8,7 +8,14 @@ tags:
   - typings
   - react
 comments: true
-path: "/blog/2016/03/31/creating-typescript-typings-for-existing-react-components"
+slug: creating-typescript-typings-for-existing-react-components
+summary:
+  Learn how to create TypeScript typings for existing React components to
+  enhance type safety and improve development experience. This article covers
+  adding typings to an open-source project and creating internal type definition
+  files for components used in your project. Start using TypeScript with
+  confidence!
+readTime: 4
 ---
 
 There are a lot of React components available on-line, and if you're using
