--- a/content/posts/functional-javascript-composition/index.mdx
+++ b/content/posts/functional-javascript-composition/index.mdx
@@ -9,7 +9,12 @@ tags:
   - composition
   - ramda
 comments: true
-path: "/blog/2016/04/25/functional-javascript-composition"
+slug: functional-javascript-composition
+summary:
+  Discover the power of composition in functional JavaScript programming. Learn
+  how to combine existing functions to create new ones, simplifying code and
+  achieving a declarative programming style. Explore examples of composition and
+  understand the benefits it brings to your code.
 ---
 
 Composition is a nice way of reusing existing functions to create new ones. Each
