--- a/content/posts/functional-javascript-introduction-and-currying/index.mdx
+++ b/content/posts/functional-javascript-introduction-and-currying/index.mdx
@@ -9,7 +9,13 @@ tags:
   - currying
   - ramda
 comments: true
-path: "/blog/2016/04/13/functional-javascript-introduction-and-currying"
+slug: functional-javascript-introduction-and-currying
+summary:
+  Discover the basics of functional programming in JavaScript and dive into the
+  concept of currying. Learn how to create curried functions that allow for
+  partial application of arguments, making your code more declarative and
+  reusable.
+readTime: 5
 ---
 
 There has been a lot of buzz around functional programming lately, sure enough I
@@ -28,9 +34,6 @@ Then why write about it?
 	class="giphy-embed"
 	allowFullScreen
 ></iframe>
-<p>
-	<a href="https://giphy.com/gifs/jon-stewart-why-lYKvaJ8EQTzCU">via GIPHY</a>
-</p>
 
 Well, they say that if you can't explain something using simple terms you don't
 really understood it. So, I hope I can write down on the subject using simple
