--- a/content/posts/functional-javascript-what-is-a-functor/index.mdx
+++ b/content/posts/functional-javascript-what-is-a-functor/index.mdx
@@ -9,7 +9,12 @@ tags:
   - functor
   - ramda
 comments: true
-path: "/blog/2016/06/16/functional-javascript-what-is-a-functor"
+slug: functional-javascript-what-is-a-functor
+summary:
+  Explore the concept of functors in functional programming with JavaScript.
+  Learn how functors can help solve common coding problems in a functional
+  style, such as handling null or undefined values. Dive into examples and
+  understand the principles behind functors.
 ---
 
 When you first start looking into functional programming, you hear a lot of
