--- a/content/posts/how-i-try-to-keep-up-to-date-with-technologies/index.mdx
+++ b/content/posts/how-i-try-to-keep-up-to-date-with-technologies/index.mdx
@@ -7,7 +7,14 @@ category: career
 tags:
   - career
 date: 2016-02-25
-path: "/blog/2016/02/25/how-i-try-to-keep-up-to-date-with-technologies"
+slug: how-i-try-to-keep-up-to-date-with-technologies
+summary:
+  Feeling overwhelmed by the constant influx of new technologies? Discover
+  practical tips to stay up-to-date without drowning in information overload.
+  Learn how to organize bookmarks, take notes, save articles for later, leverage
+  podcasts and blogs, utilize Twitter, and automate with IFTTT. Stay informed
+  and make the most of your spare moments!
+readTime: 6
 ---
 
 There are too many technologies to keep up with. Just too many. It's hard to
