--- a/content/posts/linting-typescript-with-webpack/index.mdx
+++ b/content/posts/linting-typescript-with-webpack/index.mdx
@@ -9,7 +9,14 @@ tags:
   - tslint
   - linting
 comments: true
-path: "/blog/2016/04/07/linting-typescript-with-webpack"
+slug: linting-typescript-with-webpack
+summary:
+  Learn how to use Webpack to incorporate TSLint, a powerful TypeScript linter,
+  into your development workflow. This article covers setting up a tslint.json
+  file, integrating with popular text editors, and configuring Webpack to
+  enforce linting rules during the build process. Improve your code quality
+  today!
+readTime: 3
 ---
 
 Linters are an excellent way to enforce some structure and to help avoid errors.
