--- a/content/posts/unit-testing-with-typescript-and-mocha/index.mdx
+++ b/content/posts/unit-testing-with-typescript-and-mocha/index.mdx
@@ -7,7 +7,12 @@ tags:
   - mocha
   - typescript
 comments: true
-path: "/blog/2016/05/05/unit-testing-with-typescript-and-mocha"
+slug: unit-testing-with-typescript-and-mocha
+summary:
+  Learn how to set up unit testing in TypeScript using Mocha without the need
+  for Webpack and Karma. Discover the necessary configurations, including
+  installing ts-node and updating the package.json file. Simplify your testing
+  setup and target ES6 with ease.
 ---
 
 Not long ago I wrote a post on
