--- a/content/posts/how-to-stub-promises-using-sinonjs/index.mdx
+++ b/content/posts/how-to-stub-promises-using-sinonjs/index.mdx
@@ -11,7 +11,14 @@ tags:
   - sinon
   - karma
 comments: true
-path: "/blog/2016/02/29/how-to-stub-promises-using-sinonjs"
+slug: how-to-stub-promises-using-sinonjs
+summary:
+  Testing asynchronous code with promises can be challenging, but Sinon.JS comes
+  to the rescue with its handy package, sinon-stub-promise. Learn how to
+  effortlessly stub promises in your tests, ensuring smooth testing workflows.
+  Plus, discover the bonus plugin, karma-sinon-stub-promise, for seamless
+  integration with Karma test runner.
+readTime: 2
 ---
 
 Promises are a great way of doing async programming. But testing with promises
