--- a/content/posts/running-tests-in-parallel-with-nunit3/index.mdx
+++ b/content/posts/running-tests-in-parallel-with-nunit3/index.mdx
@@ -9,7 +9,13 @@ tags:
   - nunit
   - tests
 comments: true
-path: "/blog/2016/02/29/running-tests-in-parallel-with-nunit3"
+slug: running-tests-in-parallel-with-nunit3
+summary:
+  Discover the power of running tests in parallel with NUnit 3. Learn how to
+  enable and configure parallel execution for faster and more efficient testing.
+  Explore the different parallel execution options and witness significant time
+  improvements in your test runs. Upgrade your testing game today!
+readTime: 2
 ---
 
 Since version 3 of NUnit, it is possible to run tests in parallel. And if you
