Fixes gif loading

--- a/content/posts/a-tale-of-a-pragmatic-programmer/index.mdx
+++ b/content/posts/a-tale-of-a-pragmatic-programmer/index.mdx
@@ -8,7 +8,14 @@ tags:
   - career
   - books
 date: 2016-01-27
-path: "/blog/2016/01/27/a-tale-of-a-pragmatic-programmer"
+slug: a-tale-of-a-pragmatic-programmer
+summary:
+  Dive into the timeless wisdom of "The Pragmatic Programmer" book and discover
+  valuable insights that every programmer should know. Explore topics such as
+  software entropy, avoiding gradual pitfalls, the importance of refactoring,
+  and taking pride in your work. Learn from the experiences shared in this
+  engaging article.
+readTime: 5
 ---
 
 [The Pragmatic Programmers](https://amzn.to/1KGgBxX) is a technical book
