--- a/content/posts/how-to-setup-testing-using-typescript-mocha-chai-sinon-karma-and-webpack/index.mdx
+++ b/content/posts/how-to-setup-testing-using-typescript-mocha-chai-sinon-karma-and-webpack/index.mdx
@@ -12,7 +12,14 @@ tags:
   - webpack
   - typescript
 comments: true
-path: "/blog/2016/02/02/how-to-setup-testing-using-typescript-mocha-chai-sinon-karma-and-webpack"
+slug: how-to-setup-testing-using-typescript-mocha-chai-sinon-karma-and-webpack
+summary:
+  Learn how to set up a testing project using TypeScript, Mocha, Chai, Sinon,
+  Karma, and Webpack. Follow a step-by-step guide to configure the necessary
+  packages and files, including the Webpack config file, Karma configuration
+  file, and TypeScript config file. Explore sample test examples and start
+  running tests with ease.
+readTime: 5
 ---
 
 Sometimes in our field putting together the pieces of the puzzle is a hard task,
