--- a/content/posts/visual-studio-shortcodes/index.mdx
+++ b/content/posts/visual-studio-shortcodes/index.mdx
@@ -7,7 +7,14 @@ category: code
 tags:
   - visual studio
   - shortcuts
-path: "/blog/2016/01/17/visual-studio-shortcodes"
+slug: visual-studio-shortcodes
+summary:
+  Improve your coding efficiency in Visual Studio with these five great
+  shortcuts. Learn how to quickly surround code with loops or conditions,
+  navigate through highlighted references, peek into definitions, view quick
+  information about methods or classes, and easily delete lines. Enhance your
+  Visual Studio workflow with these time-saving tips.
+readTime: 2
 ---
 
 I don't know about you, but when I'm coding, I like to keep my hands on the
