--- a/content/posts/five-things-you-should-be-doing-on-code-reviews/index.mdx
+++ b/content/posts/five-things-you-should-be-doing-on-code-reviews/index.mdx
@@ -7,7 +7,12 @@ category: agile
 tags:
   - agile
   - code review
-path: "/blog/2015/10/26/five-things-you-should-be-doing-on-code-reviews"
+summary:
+  Discover the importance of code reviews and learn about five crucial goals to
+  focus on during the process. From ensuring high-quality tests and clear naming
+  conventions to sharing knowledge, identifying architectural flaws, and
+  fostering a learning environment, these practices will elevate your code
+  review experience.
 ---
 
 Code review or peer review, as is also known, is the practice of someone
