--- a/content/posts/programming-by-coincidence/index.mdx
+++ b/content/posts/programming-by-coincidence/index.mdx
@@ -68,7 +68,7 @@ are not sent in the URL!
 	title="YouTube video player"
 	frameBorder="0"
 	allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-	allowfullscreen
+	allowFullScreen
 ></iframe>
 
 And yes, understanding and learning things is hard work, it takes time. Taking
