--- a/content/posts/your-name-your-legacy/index.mdx
+++ b/content/posts/your-name-your-legacy/index.mdx
@@ -6,7 +6,11 @@ tags:
   - career
 comments: true
 date: 2015-12-02
-path: "/blog/2015/12/02/your-name-your-legacy"
+summary:
+  Explore valuable lessons learned from a 2010 blog post inspired by "The
+  Passionate Programmer." Discover the importance of carefully choosing where
+  you put your name, leaving a positive online presence, and focusing on your
+  strengths to shape how others remember you in the tech industry.
 ---
 
 This is the translation from a post I wrote in 2010 in Portuguese that I still
@@ -20,7 +24,7 @@ think is relevant. I wrote it right after reading the great book
 	title="YouTube video player"
 	frameBorder="0"
 	allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-	allowfullscreen
+	allowFullScreen
 ></iframe>
 
 <p>
