--- a/content/posts/its-time-to-upgrade-your-javascript-skills/index.mdx
+++ b/content/posts/its-time-to-upgrade-your-javascript-skills/index.mdx
@@ -7,8 +7,13 @@ tags:
   - javascript
   - es6
   - es2015
-path: "/blog/2015/08/12/its-time-to-upgrade-your-javascript-skills"
 category: code
+summary:
+  Discover the latest news on JavaScript as TC39 Committee introduces EcmaScript
+  2015 (ES2015), marking a shift toward yearly releases of new language
+  versions. Explore browser support and the use of transpilers like Babel to
+  start utilizing ES2015 features today. Level up your JavaScript development
+  with ES2015!
 ---
 
 So, last June, the
