--- a/content/posts/talking-about-es15-classes/index.mdx
+++ b/content/posts/talking-about-es15-classes/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Talking about ES15: classes"
-description: An overview of how classes work in ES15
+title: "Talking about ES2015: classes"
+description: An overview of how classes work in ES2015
 date: 2015-09-02
 comments: true
 tags:
@@ -8,7 +8,11 @@ tags:
   - es6
   - javascript
 category: code
-path: "/blog/2015/09/02/talking-about-es15-classes"
+summary:
+  Dive into the world of ES2015 classes and discover how they simplify
+  object-oriented JavaScript. From defining classes and constructors to adding
+  methods, getters/setters, and static methods, this article covers it all.
+  Plus, explore class inheritance and the essential use of the "super" keyword.
 ---
 
 **Update:** I have also
