--- a/content/posts/talking-about-es2015-destructuring/index.mdx
+++ b/content/posts/talking-about-es2015-destructuring/index.mdx
@@ -8,7 +8,11 @@ tags:
   - es2015
   - es6
 category: code
-path: "/blog/2015/08/19/talking-about-es2015-destructuring"
+summary:
+  Learn the powerful art of destructuring in ES2015. Discover how to assign
+  values from arrays and objects to variables, swap values effortlessly, set
+  default values, and even initialize function parameters elegantly. Explore the
+  versatility of destructuring in for...of loops for efficient iteration.
 ---
 
 Destructuring is a new feature in ES2015 which allows us to declare or assign
