Add summary to all posts

--- a/content/posts/back-in-the-web-game/index.mdx
+++ b/content/posts/back-in-the-web-game/index.mdx
@@ -6,7 +6,11 @@ comments: true
 category: career
 tags:
   - career
-path: "/blog/2015/08/07/back-in-the-web-game"
+summary:
+  After a hiatus, I'm back into web development, excited about the advancements
+  in the industry. With ES2015 (ES6), ASP.NET 5, and an array of JavaScript
+  libraries, the blog will focus on exploring these technologies and sharing
+  insights to assist fellow learners.
 ---
 
 So, the last time a posted something on this blog it was almost two years ago.
