--- a/content/posts/installing-a-development-machine-with-two-commands/index.mdx
+++ b/content/posts/installing-a-development-machine-with-two-commands/index.mdx
@@ -6,7 +6,11 @@ comments: true
 tags:
   - powershell
   - chocolatey
-path: "/blog/2013/08/25/installing-a-development-machine-with-two-commands"
+summary:
+  This article shares a script that automates the installation and configuration
+  of essential applications on a development machine. By utilizing PowerShell
+  and Chocolatey package manager, you can easily set up tools like Git, Ruby,
+  Node.js, editors, browsers, and more with just two commands.
 ---
 
 Recently I had to prepare two development machines, a new notebook with Windows
