--- a/content/posts/its-just-a-mess-if-you-let-it-single-responsibility-with-javascript/index.mdx
+++ b/content/posts/its-just-a-mess-if-you-let-it-single-responsibility-with-javascript/index.mdx
@@ -8,7 +8,12 @@ comments: true
 category: code
 tags:
   - javascript
-path: "/blog/2013/07/30/its-just-a-mess-if-you-let-it-single-responsibility-with-javascript"
+summary:
+  This article highlights the importance of applying the single responsibility
+  principle in JavaScript code to avoid spaghetti code. Through code examples,
+  the author demonstrates how to refactor a shopping cart script into
+  well-structured, maintainable code with clear responsibilities using functions
+  and separation of concerns.
 ---
 
 Many people who complain about JavaScript does not take the minimum effort to
