--- a/content/posts/publishing-a-website-using-octopress-and-github-pages-from-a-new-computer/index.mdx
+++ b/content/posts/publishing-a-website-using-octopress-and-github-pages-from-a-new-computer/index.mdx
@@ -8,7 +8,11 @@ comments: true
 tags:
   - octopress
   - github-pages
-path: "/blog/2013/09/03/publishing-a-website-using-octopress-and-github-pages-from-a-new-computer"
+summary:
+  This article provides a step-by-step guide on how to publish a website using
+  Octopress and GitHub Pages. It specifically addresses the issue of deploying
+  updates to the site after cloning the repository on a new machine, offering a
+  solution involving a force push.
 ---
 
 OK, I admit, this post is very specific and it serves more so that I will
