Fixes frontmatter for posts

--- a/content/posts/jquery-validation-globalization-with-asp-dot-net-mvc-3/index.mdx
+++ b/content/posts/jquery-validation-globalization-with-asp-dot-net-mvc-3/index.mdx
@@ -9,7 +9,12 @@ tags:
   - jquery
   - javascript
   - globalization
-path: "/blog/2011/09/18/jquery-validation-globalization-with-asp-dot-net-mvc-3"
+summary:
+  Discover how to globalize the jQuery validation feature in ASP.NET MVC 3 using
+  the jQuery Globalize plugin. This article provides a simple solution to
+  overcome issues with date validation patterns, allowing you to adapt the
+  validation to different cultures effortlessly. Follow the step-by-step guide
+  and enhance your client-side validation experience.
 ---
 
 ASP.NET MVC 3 has a great feature, which is client validation using jQuery
