--- a/content/posts/programming-by-coincidence/index.mdx
+++ b/content/posts/programming-by-coincidence/index.mdx
@@ -6,7 +6,13 @@ comments: true
 category: career
 tags:
   - career
-path: "/blog/2013/07/16/programming-by-coincidence"
+summary:
+  Delve into the mindset of a programmer who values continuous learning and
+  understanding in the face of technical challenges. Explore the dangers of
+  programming by coincidence, the limitations of repetitive solutions, and the
+  importance of gaining knowledge and experience. Discover the rewards of taking
+  the red pill and expanding your understanding in the ever-evolving world of
+  programming.
 ---
 
 I like to program, and I like the technical challenges that programming brings.
