--- a/content/posts/real-immutable-types-with-typescript/index.mdx
+++ b/content/posts/real-immutable-types-with-typescript/index.mdx
@@ -13,6 +13,8 @@ summary:
   built-in Readonly type, and its limitations at runtime.
 ---
 
+export { default as banner } from "./banner.png";
+
 When writing TypeScript there's a pretty easy, simple solution to create
 immutable objects and it doesn't involve adding third-party libraries.
 
