--- a/content/posts/i-was-listening-to-a-podcast-2018-edition/index.mdx
+++ b/content/posts/i-was-listening-to-a-podcast-2018-edition/index.mdx
@@ -12,6 +12,8 @@ summary:
   recommendations for each.
 ---
 
+export { default as banner } from "./banner.png";
+
 Lately I was made aware by my colleagues that I begin a lot of sentences with
 the phrase "I was listening to a podcast..." and that is true. I listen to a lot
 of podcasts.
