--- a/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
+++ b/content/posts/typescript-and-the-power-of-the-unknown/index.mdx
@@ -13,6 +13,8 @@ summary:
   aren't yet implemented.
 ---
 
+export { default as banner } from "./banner.png";
+
 TypeScript is a language that is moving forward really fast and sometimes is
 hard to keep up with it, there are so many features being released constantly,
 that we may be missing some really important gems. I think that the `unknown`
