--- a/content/posts/handling-nulls-in-csharp-the-right-way/index.mdx
+++ b/content/posts/handling-nulls-in-csharp-the-right-way/index.mdx
@@ -18,6 +18,8 @@ summary:
   benefits of using Option<T> for null handling in C#.
 ---
 
+export { default as banner } from "./banner.png";
+
 Working with the possibility of null in any language that allows it, sucks. It's
 tedious, and there's boilerplate code involved, it's not fun and error prone.
 
