--- a/content/posts/what-makes-a-good-team/index.mdx
+++ b/content/posts/what-makes-a-good-team/index.mdx
@@ -13,6 +13,8 @@ summary:
   team great.
 ---
 
+export { default as banner } from "./banner.png";
+
 In the first week of 2017 I changed jobs, I started in a new company after a
 little more than three years on my last job. It was not an easy decision to make
 because it involved me moving to another city and another province.
